--- a/style.css
+++ b/style.css
@@ -23,10 +23,14 @@ body{
     
 }
 header > .interface h2{
-    color:#03d8b5;
+    color:#44156f;
     font-size: 42px;
     line-height: 0px;
     
+}
+button:hover, form .btn-enviar input:hover{
+    box-shadow: 0px 0px 8px #fdfdfd7a;
+    transform: scale(1.05);
 }
 
 /* estilizando o botão de contato */
@@ -34,7 +38,7 @@ header > .interface h2{
     padding : 10px 40px;
     font-size: 18px;
     font-weight: 500;
-    background-color: #02c0b6;
+    background-color: #44156f;
     border: none;
     border-radius: 30px;
     cursor: pointer;
@@ -52,6 +56,7 @@ header > .interface{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 
 
@@ -62,7 +67,7 @@ header a{
     transition: 0.2s;
 }
 
-header a:hover{
+header nav.menu-desktop a:hover{
     color: #ffffff;
     transform: scale(1.05);
 }
@@ -70,7 +75,7 @@ header a:hover{
 header nav ul{
     list-style-type: none;
 }
-header nav ul li {
+header nav.menu-desktop ul li {
     display: inline-block;
     padding: 0 40px;
 
@@ -85,6 +90,58 @@ header nav ul li {
 
 /* fim do estilo do cabecalho */
 
+/*estilo menu mobile*/
+.btn-abir-menu i{
+    display: none;
+    color: #7f37c9;
+    font-size: 40px;
+}
+.menu-mobile{
+    background-color: rgb(0, 0, 0);
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    width: 0%;
+    overflow: hidden;
+
+}
+.menu-mobile .btn-fechar{
+    padding: 20px 4%;
+
+}
+.menu-mobile .btn-fechar i{
+    color:#7f37c9;
+    font-size: 30px;
+}
+.menu-mobile nav ul{
+    text-align: right;
+
+}
+.menu-mobile nav li a {
+    color: wheat;
+    font-size: 25px;
+    font-weight: 300;
+    padding: 20px 4%;
+    display: block;
+
+}
+.menu-mobile nav ul li a:hover{
+    background-color: #44156f;
+    color: #000000;
+}
+
+.overlay-menu{
+    background-color: #00000088;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 88888;
+    display: none;
+}
 
 /* estilo do topo do site */
 
@@ -102,7 +159,7 @@ section.topo-do-site .flex{
 
 }
 .topo-do-site  h1{
-    color: #02c0b6;
+    color: #7f37c9;
     font-size: 60px;
     line-height: 40px;
 }
@@ -134,15 +191,8 @@ section.topo-do-site .flex{
     height: 400px;
 }
 
-@keyframes flutuar{
-    0%{
-        top: 0;
-    }
-    100%{
-        top: 30px;
-    }
 
-}
+
 :root{
     --color-neutral-0: #000000;
     --color-neutral-10: #000000;
@@ -161,20 +211,43 @@ footer {
 .footer-link{
     text-decoration: none;
 }
+
+
 #footer_content{
     background-color: var(--color-neutral-10);
     display:flex;
     justify-content: center;
     align-items: center;
+    padding: 10px;
     
 }
+.rede-social-instagran{
+    display: flex;
+    flex-direction: row ;
+}
+.rede-social-instagran p{
+    margin-left: 0.5rem;
+}
 
+.rede-social-github{
+    display: flex;
+    flex-direction: row ;
+}
+.rede-social-github p{
+    margin-left: 0.5rem;
+}
+.rede-social-linkedin{
+    display: flex;
+    flex-direction: row ;
 
+}
+.rede-social-linkedin p{
+    margin-left: 0.5rem;
+}
 #footer_social_media{
     display: flex;
     gap: 10rem;
     margin-top: 1.05rem;
-
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -196,4 +269,234 @@ footer {
 
 .footer-list .footer-link:hover{
     color: #7f37c9;
+}
+
+/* fim do estilo do footer */
+
+/*pagina portifolio*/
+section.portifólio{
+    padding: 80px 4%;
+    box-shadow: 0 0 40px 10px #a3a0a013;
+}
+
+section.portifólio .flex{
+    justify-content: space-around;
+    margin-top: 60px;
+    
+}
+
+section.portifólio h2{
+    text-align: center;
+    font-size: 40px;
+    color: #ffffff;
+}
+
+section.portifólio h2 span{
+    color: #7f37c9;
+}
+
+.img-port{
+    width: 360px;
+    height: 460px;
+    background-color: #7f37c9;
+    background-size: cover;
+    background-position: 100% 0%;
+    transition: 6s;
+    cursor: pointer;
+    border-radius: 40px;
+    position: relative;
+}
+.img-port:hover{
+    background-position: 100% 100%;
+}
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.705);
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 600;
+    color: #ffffff;
+    opacity: 0;
+    transition: 0.5s;
+   
+}
+.overlay:hover{
+    opacity: 1;
+}
+/*estilizando o video*/
+.videos{
+    display: flex;
+    padding: 50px ;
+    align-items: center;
+    justify-content: center;
+    background-color: #1A1A1A;
+    box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.308) ;
+}   
+
+/*ESTILO DO FORMULARIO DE CONTATO*/
+section.formulario{
+    padding: 50px 4%;
+
+}
+
+form{
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+form input,
+form textarea{
+    width: 100%;
+    background-color: #0000002f;
+    border: 0;
+    outline: 0;
+    padding: 20px 15px;
+    border-radius: 20px;
+    color: #ffffff;
+    font-size: 18px;
+    text-align: center;
+}
+form input::placeholder{
+    color: rgba(137, 43, 226, 0.514);
+}
+
+form textarea{
+    resize: none;
+    max-height: 600px;
+}
+
+form .btn-enviar{
+    margin-top: 20px;
+    text-align: center;
+
+}
+
+form .btn-enviar input{
+    width: 120px;
+    background-color:#7f37c9;
+    color: #000000;
+    cursor: pointer;
+    transition: 0.2s;
+
+
+}
+section h2{
+    text-align: center;
+    padding: 20px;
+    font-size: 40px;
+    color: #ffffff;
+}
+section h2 span{
+    color:#7f37c9;
+}
+
+/*responsividade*/
+
+
+@media screen and (max-width: 900px){
+    /*classes gerais*/
+    .flex{
+        flex-direction:column;
+
+    }
+    .txt-topo-site h1{
+        line-height: 85%;
+    }
+    .topo-do-site .txt-topo-site p{
+        font-size: 25px;
+        line-height: 30px;
+    
+    }
+    
+    .topo-do-site .flex{
+        flex-direction: column-reverse;
+    }
+    /*cabeçalho*/
+    .menu-desktop, .btn-contato{
+        display: none;
+
+    }
+    /*portifolio*/
+    section.portifólio{
+        padding: 1% 8%;
+        align-items: center;
+        justify-content: center;
+    }
+    section.portifólio .flex{
+       gap: 20px;       
+    }
+    .img-port{
+        margin: auto;
+        width: 100%;
+        max-width: 360px;
+
+    }
+    footer {
+        width: 100%;
+        color: var(--color-neutral-40)
+    
+    }
+    .footer-link{
+        text-decoration: none;
+    }
+    
+    
+    #footer_content{
+        background-color: var(--color-neutral-10);
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .rede-social-instagran{
+        display: flex;
+        flex-direction: row ;
+    }
+    .rede-social-instagran p{
+        margin-left: 0.5rem;
+    }
+    
+    .rede-social-github{
+        display: flex;
+        flex-direction: row ;
+    }
+    .rede-social-github p{
+        margin-left: 0.5rem;
+    }
+    .rede-social-linkedin{
+        display: flex;
+        flex-direction: row ;
+    }
+    .rede-social-linkedin p{
+        margin-left: 0.5rem;
+    }
+    #footer_social_media{
+        display: flex;
+        gap: 2rem;
+        margin-top: 0.5rem;
+        padding: 1%;
+        align-items: center;
+        text-align: center;
+        justify-content: center;     
+    }
+    .videos{
+        padding: 2% 1.5%;
+        align-items: center;
+        justify-content: center;
+    }
+    .btn-abir-menu i{
+        display: flex;
+
+    }
+
 }
