--- a/style.css
+++ b/style.css
@@ -7,10 +7,22 @@
 
 }
 
-body{
+body, html{
     background-color: #131212;
-    height: 100vh;
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
+body{
+    min-height: 100vh;
+
+}
+main{
+    flex: 1;
+
+}
+
 
 .interface{
     max-width: 1280px;
@@ -34,7 +46,7 @@ button:hover, form .btn-enviar input:hover{
 }
 
 /* estilizando o botão de contato */
-.btn-contato button{
+.btn-contato button {
     padding : 10px 40px;
     font-size: 18px;
     font-weight: 500;
@@ -588,3 +600,56 @@ section.projetos h3 span{
     opacity: 1;
 }
 
+/* Contêiner principal das mensagens */
+.container-mensagens {
+    padding: 100px;
+    max-width: 800px;
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.container-mensagens h1 {
+    text-align: center;
+    color:#44156f;
+    margin-bottom: 0px;
+}
+
+/* Estilo das mensagens */
+#listaMensagens div {
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 15px;
+
+}
+
+#listaMensagens div h3 {
+    margin: 0 0 10px 0;
+    color:#7f37c9;
+}
+
+#listaMensagens div p {
+    margin: 5px 0;
+    font-size: 18px;
+    color:  #c2c2c2;
+}
+
+/* Botão Remover */
+#listaMensagens div button {
+    display: inline-block;
+    padding: 8px 12px;
+    margin-top: 10px;
+    gap: 10px;
+    background-color:#44156f;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#listaMensagens div button:hover {
+    background-color: #f80000c5;
+}
